--- a/Experiment_7/style.css
+++ b/Experiment_7/style.css
@@ -2,3 +2,12 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 20px;
 }
+.block_menu{
+    display: block;
+    background-color: rgb(63, 145, 239);
+    text-align: left;
+    color: white;
+    padding: 10px;
+    margin: 5px 0;
+    text-decoration: none;
+}
