--- a/Experiment_7/style.css
+++ b/Experiment_7/style.css
@@ -28,3 +28,20 @@ body{
     margin: 5px;
     text-decoration: none;
 }
+.float
+ {
+    color: white;
+    padding: 10px 18px;
+    float: inline-start ;
+    margin-right: 12px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+}
+
+.clear_example{
+    clear:both;
+    background-color: wheat;
+    padding: 10px;
+    margin-top: 20px;
+    border: ;
+}
