--- a/Experiment_9/style.css
+++ b/Experiment_9/style.css
@@ -16,3 +16,9 @@
     font-weight: bold;
     font-size: larger;
 }
+.conent
+{
+    color: rgb(60, 61, 62);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
