--- a/Experiment_9/style.css
+++ b/Experiment_9/style.css
@@ -22,3 +22,9 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
+.price
+{
+    color: green;
+    font-weight: bold;
+    font-size: larger;
+}
