--- a/Experiment_9/style.css
+++ b/Experiment_9/style.css
@@ -1,3 +1,7 @@
+.body
+{
+    background-color: rgb(203, 205, 206);
+}
 .card
 {
     display: inline-block;
@@ -7,7 +11,7 @@
     font-size: 150%;
     text-align: center;
     border: solid rgb(103, 103, 107) 2px;
-    
+    background-color: white;
     border-radius: 5px;
     box-shadow: 5px 5px 4px rgb(0 0 0 / 20%)
 }
@@ -18,7 +22,7 @@
 }
 .conent
 {
-    color: rgb(60, 61, 62);
+    color: rgb(131, 132, 133);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -27,4 +31,19 @@
     color: green;
     font-weight: bold;
     font-size: larger;
+    font-family: sans-serif;
 }
+.btn {
+    padding: 10px 20px;
+    background-color: #007BFF; 
+    border: none;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    height: 50px;
+    font-weight: bold;
+    width: 150px;
+
+}
+
