--- a/Experiment_9/style.css
+++ b/Experiment_9/style.css
@@ -1,19 +1,32 @@
 .body
-{
+{   
     background-color: rgb(203, 205, 206);
+    
+}
+.box
+{
+   display: flex; 
+   justify-content: space-between;
 }
 .card
 {
     display: inline-block;
     padding: 20px 40px;
-    margin: 20px 0px;
+    margin: 20px 10px;
     gap: 40px;
     font-size: 150%;
     text-align: center;
     border: solid rgb(103, 103, 107) 2px;
     background-color: white;
     border-radius: 5px;
-    box-shadow: 5px 5px 4px rgb(0 0 0 / 20%)
+    box-shadow: 5px 5px 4px rgb(0 0 0 / 20%);
+    width: 19%;
+    max-width: 400px;
+    height: 570px;
+    align-items: center;
+    bottom: 0;
+    
+
 }
 .header
 {
@@ -34,6 +47,9 @@
     font-family: sans-serif;
 }
 .btn {
+    display: flex;
+    justify-self: center;
+    justify-content: center;
     padding: 10px 20px;
     background-color: #007BFF; 
     border: none;
@@ -44,6 +60,8 @@
     height: 50px;
     font-weight: bold;
     width: 150px;
+    
+    
 
 }
 .btn:hover {
@@ -54,4 +72,8 @@
     font-size: 300%;
     text-align: center;
 
+}
+.card:hover
+{
+    transform: scale(1.05); 
 }
