--- a/Experiment_9/style.css
+++ b/Experiment_9/style.css
@@ -9,7 +9,8 @@
    justify-content: space-between;
 }
 .card
-{
+{   
+    /* display: inline-block flex; */
     display: inline-block;
     padding: 20px 40px;
     margin: 20px 10px;
