--- a/practice/style.css
+++ b/practice/style.css
@@ -1,16 +1,24 @@
 .cont
 {
+    /* display: inline-grid; 
+    converts into inline format */
     display: grid;
-    /* grid-template-columns: 1fr 2fr 2fr; */
-    grid-template-columns: (3,1fr);
-    /* auto fil method? repeat(auto-fit) */
+    /* grid-template-columns: 1fr 3fr 3fr; */
+    grid-template-columns: repeat(3,1fr);
     column-gap: 20px;
-    /* border: solid black; */
-    text-align: center;
+    row-gap: 10px;
+    background-color: dodgerblue;
+    padding: 10px;
     
 
 }
 .cont div
 {
-    border: solid black;
+    /* border: solid black; */
+  background-color: #f1f1f1;
+  border: 1px solid black;
+  padding: 10px;
+  font-size: 30px;
 }
+
+
