--- a/practice/from_scrach/stlye.css
+++ b/practice/from_scrach/stlye.css
@@ -11,4 +11,6 @@ body
     width: 400px;
     background-color: rgb(79, 69, 55);
     border: dashed yellow 4px;
+    padding: 10px 20px 30px 40px;
+    margin: 0px 20px 50px 20px;
 }
