--- a/practice/from_scrach/stlye.css
+++ b/practice/from_scrach/stlye.css
@@ -12,5 +12,16 @@ body
     background-color: rgb(79, 69, 55);
     border: dashed yellow 4px;
     padding: 10px 20px 30px 40px;
+    /* top right bottom left */
     margin: 0px 20px 50px 20px;
+}
+#inline
+{
+    display: inline;
+    background-color: blueviolet;
+    color: white;
+    margin: 30px;
+    height: 400px;
+    width: 400px;
+    /* inline me top bottom margin nahi hote or size bhi set nahi hoti */
 }
