--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -48,3 +48,37 @@
    align-self: center;
    font-size: 130%; 
 }
+#nav-search
+{
+    display: flex;
+    flex-direction: row;
+    width: 45%;
+    height: 50px;
+    margin: 10px 4px 10px 3px;
+    background-color: white;
+    color: black;
+    /* border-radius: 5% 5% 5% 5%; */
+}
+#nav-search #sort
+{
+    width: 10%;
+    background-color: #e2dfdf;
+    font-size: 100%;
+    text-align: center;
+    color: rgb(83, 82, 82);
+}
+#nav-search #search
+{
+    width: 80%;
+    font-size: 150%;
+}
+#nav-search #search_button
+{
+    
+    width: 10%;
+    font-size: 170%;
+    background-color: #e2dfdf;
+    height: 100%;
+    color: rgb(83, 82, 82);
+    
+}
