--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -10,10 +10,12 @@
 {
     position: fixed;
     display: flex;
+    justify-content: space-around;
     gap: 2px;
     flex-direction: row;
     width: 100%;
-    height: 70px;
+    min-width: 1200px;
+    height: 75px;
     background-color: #ff920d;
     
 }
@@ -23,10 +25,13 @@
     background-image: url(logoe.jpg);
     background-size: cover;
     height: 100%;
-    width: 9%;
+    width: 10%;
     margin: 0px 1px;
     padding: 0px 8px 0px 6px;
 }
+#nav-logo:hover { border: solid white 2px;}
+
+
 #nav-location
 {
     display: flex;
@@ -48,14 +53,17 @@
    align-self: center;
    font-size: 130%; 
 }
+#nav-location:hover { border: solid white 2px;}
+
+
 #nav-search
 {
     display: flex;
     flex-direction: row;
-    width: 45%;
+    width: 50%;
     height: 50px;
     margin: 10px 4px 10px 3px;
-    background-color: white;
+    /* background-color: white; */
     color: black;
     /* border-radius: 5% 5% 5% 5%; */
 }
@@ -66,11 +74,16 @@
     font-size: 100%;
     text-align: center;
     color: rgb(83, 82, 82);
+    border-top-left-radius: 5px ;
+    border-bottom-left-radius: 5px ;
+    border: none;
+    height: 100%;
 }
 #nav-search #search
 {
     width: 80%;
     font-size: 150%;
+    height: 100%;
 }
 #nav-search #search_button
 {
@@ -80,5 +93,13 @@
     background-color: #e2dfdf;
     height: 100%;
     color: rgb(83, 82, 82);
+    border-top-right-radius: 5px ;
+    border-bottom-right-radius: 5px ;
+    border: none;
+
     
 }
+#nav-search:hover { box-shadow: 2px 8px 4px rgb(0 0 0 / 50%)}
+
+
+
