--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -103,3 +103,54 @@
 
 
 
+#nav-laguage
+{
+    display: flex;
+    flex-direction: row;
+    width: 5%;
+    height: 100%;
+    background-color: aqua;
+    margin: 0px 1px;
+    padding: 0px 7px;
+}
+
+#nav-account
+{
+    height: 100%;
+    width: 10%;
+    margin: 5px 2px 5px 0px;
+    padding: 0px 9px 0px 9px;
+    color: white;
+    text-align: center;
+    
+}
+#nav-account #btn 
+{
+  background-color: #ff920d;
+  color: white;
+  border: none;
+  padding: 4px 1px;
+  width: 100%;
+  height: 80%;
+  border: none;
+  margin: auto;
+  font-size: 140%;
+}
+#dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+#dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+#dropdown-content a:hover {background-color: #ddd;}
+#nav-account:hover #dropdown-content {display: block;}
+#nav-account:hover #btn { border: solid white 2px;}
+
