--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -173,3 +173,29 @@
 }
 #nav-return_order:hover{ border: solid white 2px;}
 
+#nav-cart
+{
+    display: flex;
+    direction: row;
+    width: 7%;
+    text-align: center;
+}
+#nav-cart i
+{
+    color: white;
+    padding: 30px 0px 30px 5px;
+    font-size: 150%;
+}
+#nav-cart #btn
+{
+    background-color: #ff920d;
+    color: white;
+    border: none;
+    padding: 30px 5px 30px 0px;
+    width: 100%;
+    height: 80%;
+    border: none;
+    
+    font-size: 140%;
+}
+#nav-cart:hover{ border: solid white 2px;}
