style sturcturing content

--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -4,25 +4,29 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;  
 }
-    
 
+body
+{
+    background-color: #f4f9fd;
+}
+/* ^^^^^^^^^^^^^^^^^^^^^^ nav bar^^^^^^^^^^^^^^^^^^^^^^^ */
 .navbar
 {
-    position: fixed;
+    position:sticky;
     display: flex;
     justify-content: space-around;
     gap: 2px;
     flex-direction: row;
     width: 100%;
     min-width: 1200px;
-    height: 75px;
-    background-color: #ff920d;
+    height: 80px;
+    background-color: #04060f;
     
 }
 #nav-logo
 {
     
-    background-image: url(logoe.jpg);
+    background-image: url(logo.jpg);
     background-size: cover;
     height: 100%;
     width: 10%;
@@ -37,7 +41,7 @@
     display: flex;
     flex-direction: row;
     height: 80%;
-    width: 7%;
+    width: 17%;
     margin: 5px 2px 5px 0px;
     padding: 0px 9px 0px 9px;
     color: white;
@@ -60,7 +64,7 @@
 {
     display: flex;
     flex-direction: row;
-    width: 50%;
+    width: 40%;
     height: 50px;
     margin: 10px 4px 10px 3px;
     /* background-color: white; */
@@ -90,7 +94,7 @@
     
     width: 10%;
     font-size: 170%;
-    background-color: #e2dfdf;
+    background-color: #ff920d;
     height: 100%;
     color: rgb(83, 82, 82);
     border-top-right-radius: 5px ;
@@ -126,7 +130,7 @@
 }
 #nav-account #btn 
 {
-  background-color: #ff920d;
+  background-color:#04060f;
   color: white;
   border: none;
   padding: 4px 1px;
@@ -161,7 +165,7 @@
 }
 #nav-return_order #btn
 {
-    background-color: #ff920d;
+    background-color:#04060f;
     color: white;
     border: none;
     padding: 4px 1px;
@@ -186,9 +190,10 @@
     padding: 30px 0px 30px 5px;
     font-size: 150%;
 }
+/* #ff920d; */
 #nav-cart #btn
 {
-    background-color: #ff920d;
+    background-color: #04060f;
     color: white;
     border: none;
     padding: 30px 5px 30px 0px;
@@ -199,3 +204,64 @@
     font-size: 140%;
 }
 #nav-cart:hover{ border: solid white 2px;}
+
+/* ^^^^^^^^^^^^^^^^^^^^^^ meru bar^^^^^^^^^^^^^^^^^^^^^^^ */
+.menu {
+    
+    background-color: #1f2937;
+    padding: 12px 20px;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+
+.menu a {
+    padding: 5px;
+    height: 100%;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.menu a:hover {
+    /* text-decoration: underline; */
+    border: solid white 1px;
+}
+
+
+/* ^^^^^^^^^^^hero section slideshow^^^^^^^^^^^^^^^^^ */
+
+.slideshow
+{
+    display: flex;
+    flex-wrap: nowrap;
+    position: relative;
+    margin: auto;
+    height: 500px;
+    
+}
+.slideshow .img
+{
+    width: 100%;
+    display: none;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
