--- a/Experiment_7/style.css
+++ b/Experiment_7/style.css
@@ -46,7 +46,7 @@ body{
     border: ;
 }
 .heading{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif
 }
 .red{
     background-color: rgb(252, 22, 22);
