--- a/practice/style.css
+++ b/practice/style.css
@@ -120,3 +120,30 @@ place-content - Shorthand property for align-content and justify-content */
 
   }
 }
+.anni
+{
+  animation-name: colchange;
+  animation-duration: 4s;
+  animation-timing-function: ease-in;
+  /* animation-iteration-count: 5; */
+  animation-iteration-count: infinite;
+  /* can give infinite */
+}
+@keyframes colchange{
+  /* form{background-color: red;}
+  to{background-color: blueviolet;} */
+  0%{
+    background-color: red;
+  }
+  25%{
+    background-color: rgb(255, 234, 0);
+  }
+  50%
+  {
+    background-color: rgb(13, 255, 0);
+  }
+  100%
+  {
+    background-color: blue;
+  }
+}
