--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -7,12 +7,16 @@
 
 body
 {
-    background-color: #f4f9fd;
+    background-color: #C1C1C1; 
+    /* #f4f9fd; */
 }
 /* ^^^^^^^^^^^^^^^^^^^^^^ nav bar^^^^^^^^^^^^^^^^^^^^^^^ */
 .navbar
 {
+    z-index: 2;
     position:sticky;
+    top: 0px;
+
     display: flex;
     justify-content: space-around;
     gap: 2px;
@@ -29,7 +33,7 @@ body
     background-image: url(logo.jpg);
     background-size: cover;
     height: 100%;
-    width: 10%;
+    width: 9%;
     margin: 0px 1px;
     padding: 0px 8px 0px 6px;
 }
@@ -236,32 +240,69 @@ body
 
 /* ^^^^^^^^^^^hero section slideshow^^^^^^^^^^^^^^^^^ */
 
-.slideshow
-{
-    display: flex;
-    flex-wrap: nowrap;
-    position: relative;
-    margin: auto;
-    height: 500px;
-    
+.slideshow {
+  width: 100%;
+  height: 900px;
+  overflow: hidden;
+  position: relative;
 }
-.slideshow .img
-{
-    width: 100%;
-    display: none;
+
+.slideshow img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  left: 100%;
+  animation: slide 25s infinite;
+  -webkit-mask-image: linear-gradient(to top, transparent, black 20%);
+  mask-image: linear-gradient(to top, transparent, black 20%);
+}
+
+.slideshow img:nth-child(1) { animation-delay: 0s; }
+.slideshow img:nth-child(2) { animation-delay: 5s; }
+.slideshow img:nth-child(3) { animation-delay: 10s; }
+.slideshow img:nth-child(4) { animation-delay: 15s; }
+.slideshow img:nth-child(5) { animation-delay: 20s; }
+
+@keyframes slide {
+  0% {
+    left: 100%;
+  }
+  10% {
+    left: 0;
+  }
+  30% {
+    left: 0;
+  }
+  40% {
+    left: -100%;
+  }
+  100% {
+    left: -100%;
+  }
 }
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 40%;
   width: auto;
   margin-top: -22px;
   padding: 16px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 30px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
 
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
