amazon_style_card section

--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -306,3 +306,67 @@ body
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
+
+
+
+
+.cards {
+  position: relative;
+  top: -500px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  background: #fff;
+  padding: 20px;
+  height: 60vh;
+}
+
+.card h2 {
+  font-size: 40px;
+  font-weight: bolder;
+  margin-bottom: 15px;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+
+.item {
+  text-decoration: none;
+  color: #000;
+}
+
+.item img {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+}
+
+.item p {
+  font-size: 18px;
+  margin: 6px 0 0;
+}
+
+.item:hover img {
+  opacity: 0.9;
+}
+
+.footer-link {
+  position: absolute;
+  bottom: 35px;
+  display: inline-block;
+  margin-top: 35px;
+  color: #007185;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.footer-link:hover {
+  text-decoration: underline;
+}
