--- a/portfolio_project/style.css
+++ b/portfolio_project/style.css
@@ -80,4 +80,46 @@ body {
     background-color: #0058b7;
 }
 
+/* section I */
+.section {
+    padding: 60px 10%;
+    text-align: center;
+    
+    
+
+}
+
+.section h2 {
+    font-size: 3rem;
+    
+    margin-bottom: 30px;
+}
+
+.section-text {
+    max-width: 1500px;
+    font-size: 1.3rem;
+    margin: 0 auto;
+}
+
+
+.skills-container {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    
+    flex-wrap: wrap;
+}
+
+.skill-tag {
+    font-size: 1.5rem;
+    background: #fff;
+    padding: 10px 20px;
+    border-radius: 8px;
+    
+    
+}
+.skill-tag:hover
+{
+    box-shadow: 0 8px 6px rgba(0,0,0,0.1);
+}
 
