--- a/portfolio_project/style.css
+++ b/portfolio_project/style.css
@@ -122,4 +122,25 @@ body {
 {
     box-shadow: 0 8px 6px rgba(0,0,0,0.1);
 }
+/* section II */
+.project-grid {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.project-card {
+    background: #fff;
+    font-size: 1.5rem;
+    padding: 30px;
+    border-radius: 12px;
+    
+    width: 400px;
+    text-align: left;
+}
+.project-card:hover
+{
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+}
 
