--- a/project_amazon/style.css
+++ b/project_amazon/style.css
@@ -13,8 +13,8 @@ body
 /* ^^^^^^^^^^^^^^^^^^^^^^ nav bar^^^^^^^^^^^^^^^^^^^^^^^ */
 .navbar
 {
-    z-index: 2;
-    position:sticky;
+    z-index: 10;
+    position: fixed;
     top: 0px;
 
     display: flex;
@@ -229,6 +229,8 @@ body
 /* ^^^^^^^^^^^^^^^^^^^^^^ meru bar^^^^^^^^^^^^^^^^^^^^^^^ */
 .menu {
     position: relative;
+    top: 80px;
+    z-index: 2;
     background-color: #1f2937;
     padding: 12px 20px;
     width: 100%;
@@ -258,6 +260,8 @@ body
 /* ^^^^^^^^^^^hero section slideshow^^^^^^^^^^^^^^^^^ */
 
 .slideshow {
+  position: relative;
+  top: 80px;
   width: 100%;
   height: 900px;
   overflow: hidden;
@@ -329,7 +333,7 @@ body
 
 .cards {
   position: relative;
-  top: -500px;
+  top: -350px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 20px;
